fix(form): remove overflow and max-height rules (#2024)
* chore: prettier

* refactor(select): remove unused styles

* refactor(select): move data attribute to wrapper

* refactor(text-area): mv data attribute to wrapper

* refactor(text-input): mv data attribute to wrapper

* Update src/components/select/select.hbs


* Update src/components/select/select.hbs


* Update src/components/select/select.hbs


* Update src/components/select/select.hbs


* docs: add info on relocated data attr selectors

--- a/src/components/text-input/_text-input.scss
+++ b/src/components/text-input/_text-input.scss
@@ -235,8 +235,7 @@
   //-----------------------------
   // Error
   //-----------------------------
-  .#{$prefix}--text-input[data-invalid],
-  .#{$prefix}--text-input:invalid {
+  .#{$prefix}--text-input--invalid {
     @include focus-outline('invalid');
     box-shadow: none;
 
